--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./database/database.sql:/docker-entrypoint-initdb.d/database.sql
+      - ./database/assessment_db.sql:/docker-entrypoint-initdb.d/assessment_db.sql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
