--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - ./src:/var/www/src
-      - ./public:/var/www/html
+      - ./backend/src:/var/www/src
+      - ./backend/public:/var/www/html
     depends_on:
       - db
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
   db:
     image: mariadb:latest
@@ -26,7 +26,7 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./database/vacation_request_db.sql:/docker-entrypoint-initdb.d/vacation_request_db.sql
+      - ./backend/database/vacation_request_db.sql:/docker-entrypoint-initdb.d/vacation_request_db.sql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -37,6 +37,19 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: root
+
+  frontend:
+    container_name: react_frontend_container
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - php
 
 volumes:
   db_data:
